--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,16 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "cmd/day1"
+            "program": "cmd/day1",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Day 2",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "cmd/day2",
+            "console": "integratedTerminal"
         }
     ]
 }
