--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,14 @@
             "mode": "auto",
             "program": "cmd/day2",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Day 3",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "cmd/day3",
+            "console": "integratedTerminal"
         }
     ]
 }
