--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,14 @@
             "mode": "auto",
             "program": "cmd/day3",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Day 4",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "cmd/day4",
+            "console": "integratedTerminal"
         }
     ]
 }
