--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,6 +43,14 @@
             "mode": "auto",
             "program": "cmd/day5",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Day 6",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "cmd/day6",
+            "console": "integratedTerminal"
         }
     ]
 }
