--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -59,6 +59,14 @@
             "mode": "auto",
             "program": "cmd/day7",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Day 8",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "cmd/day8",
+            "console": "integratedTerminal"
         }
     ]
 }
