--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -67,6 +67,14 @@
             "mode": "auto",
             "program": "cmd/day8",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Day 9",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "cmd/day9",
+            "console": "integratedTerminal"
         }
     ]
 }
